--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Replace the header contents:
 
     <header>          
       <img src="https://live.staticflickr.com/65535/54138635335_79e07effe4_o.png" width="100" align="right" height="100" alt="KH_monogram">            
-      <h1>Firstname Lastname's Name of Site</h1>
+      <h1>Alex Peltzer-Harding's Organizational WikiHow</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
     </header>
