--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Add your introduction to your step-by-step-guide, including a title, time requir
               <b>Easiness Rating:</b> 100% anyone can do it!</p>
             <hr>
 
-            <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
+            <p>Is your desktop a mess? Are you having a hard time finding the files you need? Well worry not, this page will give you step by step instructions on how to set yourself up for success! Keep reading below to learn how to organize your files in an efficient and accessible way.</p>
 
           </div>
 
