--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Locate the Journalism Files You Wish to Organize</h3>
+              <p>Make sure you also find any photos, videos, and draft documents floating around your computer.</p> 
             </div>
           </li>
 
