--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <li>
             <div class="content">
               <h3>Create Individual Folders for Different Materials and Projects</h3>
-              <p>Some examples of this might be photos, videos, article references, and drafts! Be sure to create as many folders as necessary.</p>
+              <p>While in Files, right click to bring up a pop up menu. It will give you the option to create a folder, do so as many times as necessary! You may right click on the folder to rename it and can drag it wherever you wish it to be.</p>
 
               <!--
 This block contains a photo and has a caption.
@@ -131,7 +131,7 @@ We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
               <a href="https://www.flickr.com/photos/joannova/5551053514/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <p class="caption">Keep your p</p>
             </div>
           </li>
 
