--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <h3>Color Code your Files!</h3>
+              <p>In many cases, this means adding a color coded tag to things! This way, you're able to visually find things much easier. Once again, right click on a folder and select a color that you like for each folder section.</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
