--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="https://live.staticflickr.com/5139/5551053514_b9be21f06e_o.jpg" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
-              <p class="caption">Keep your folders simple!p</p>
+              <a href="https://www.flickr.com/photos/joannova/5551053514/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="folders" height="%" width="%" src="https://live.staticflickr.com/5139/5551053514_b9be21f06e_o.jpg" ></a>
+              <p class="caption">Keep your folders simple!</p>
             </div>
           </li>
 
