--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ with a paragraph to create a photo with a caption.
               <p>In many cases, this means adding a color coded tag to things! This way, you're able to visually find things much easier. Once again, right click on a folder and select a color that you like for each folder section.</p>
 
 
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/_P6yITx1MRY?si=GvscXsmbMpnTC_b4" frameborder="0" allowfullscreen></iframe>
             </div>
 
           </li>
