--- a/index.html
+++ b/index.html
@@ -150,16 +150,16 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Have a central Folder on your Desktop</h3>
+              <p>From the Files app, drag and drop a singular folder that you title "Journalism" onto your Desktop for easy acess.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Backup your folder onto a hardrive.</h3>
+              <p>Plug your hard drive into your computer and open it. You can drag your master folder titled "Journalism" into the hard drive. Be sure to press 'eject' before taking it out! Now your folders are stored in multiple places for safe keeping!</p> 
             </div>
           </li>
 
