--- a/index.html
+++ b/index.html
@@ -179,8 +179,7 @@ Change the text and links in the footer of this page to acknowledge the sources 
 -->         
 
     <footer>
-      <p>The original how-to appeared in <a href="http://www.wikihow.com/Hide-Christmas/Birthday-Presents" title="How to Hide Christmas/Birthday Presents: 7 Steps - wikiHow">WikiHow</a>.</p>
-      <p>Images are by <a href="http://www.flickr.com/photos/puuikibeach/4655440844/" title="Aquapod™ Water Rocket Launcher in Action by puuikibeach, on Flickr">puuikibeach from Flickr</a></p>
+      <p>Images are by <a href="https://www.flickr.com/photos/joannova/5551053514/" title=folders by joannova, on Flickr">joannova from Flickr</a></p>
     </footer>
 
     <!--
@@ -209,7 +208,7 @@ Customise the visual style and appearance of your guide.
         margin:0 0 130px;
         width:100%;
         font-weight:normal;
-        font-family:Arial, sans-serif;         /* CHANGE THE FONT HERE */
+        font-family:Arial, sans-serif;         /* Montserrat */
         color:#555;         /* CHANGE THE FONT COLOR HERE */
       }  
 
