--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ Customise the visual style and appearance of your guide.
         width:100%;
         font-weight:normal;
         font-family:Arial, sans-serif;         /* Montserrat */
-        color:#555;         /* CHANGE THE FONT COLOR HERE */
+        color:#555;         /* #E0B400 */
       }  
 
       /* PAGE LAYOUT */
