--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ Customise the visual style and appearance of your guide.
       /* BASIC STYLES FOR THE PAGE */
       
       a {
-        color:#1593A1;         /* CHANGE THE LINK COLOR HERE */
+        color:#1593A1;         /* #f0da80 */
         font-weight:bold;
       }
 
