--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ Customise the visual style and appearance of your guide.
         margin:0 0 130px;
         width:100%;
         font-weight:normal;
-        font-family:Arial, sans-serif;         /* Montserrat */
+        font-family:Monterrat, sans-serif;        
         color:#555;         /* #E0B400 */
       }  
 
