--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@ Customise the visual style and appearance of your guide.
         margin:0 0 130px;
         width:100%;
         font-weight:normal;
-        font-family:Arial, Montserrat;        
-        color:#555;         /* #E0B400 */
+        font-family:Montserrat, sans-serif;        
+        color:#555;         
       }  
 
       /* PAGE LAYOUT */
@@ -217,7 +217,7 @@ Customise the visual style and appearance of your guide.
       header, footer {
         padding:5%;
         border:0 10%;
-        background-color:#A1D0EB;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
+        background-color:#d0bff7;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
         width:100%;
         margin:0px;        
       }
