--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ Customise the visual style and appearance of your guide.
       header, footer {
         padding:5%;
         border:0 10%;
-        background-color:#d0bff7;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
+        background-color:#f7ecbf;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
         width:100%;
         margin:0px;        
       }
@@ -275,8 +275,8 @@ Customise the visual style and appearance of your guide.
       ul {
         font-family:"Courier New", Courier, monospace;
         box-shadow:0px 2px 10px #ddd;
-        background-color: #D3E3E8;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
-        border: 1px solid #555;           /* CHANGE THE THINGS BORDER HERE */
+        background-color: #a080f0;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
+        border: 1px solid #4100E0;           /* CHANGE THE THINGS BORDER HERE */
         padding:0;
         margin:2em 0 0;
         position:relative;
